# labelize

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  e2e-integration.yml  release.yml
docs/: DIFF_THRESHOLDS.md  USAGE.md
e2e/cli/: test_cli.sh
e2e/http/: test_http.sh
examples/wasm-demo/: index.html  main.js
homebrew/: labelize.rb
scripts/: build-wasm.sh
src/: error.rs  lib.rs  main.rs  wasm.rs
src/assets/: mod.rs
src/barcodes/: aztec.rs  bit_matrix.rs  code128.rs  code39.rs  datamatrix.rs  ean13.rs  maxicode.rs  mod.rs  pdf417.rs  qrcode.rs  twooffive.rs
src/drawers/: drawer_state.rs  mod.rs  renderer.rs
src/elements/: barcode_128.rs  barcode_2of5.rs  barcode_39.rs  barcode_aztec.rs  barcode_datamatrix.rs  barcode_ean13.rs  barcode_info.rs  barcode_pdf417.rs  barcode_qr.rs  drawer_options.rs  field_alignment.rs  field_block.rs  field_info.rs  field_orientation.rs  font.rs  graphic_box.rs  graphic_circle.rs  graphic_diagonal_line.rs  graphic_field.rs  graphic_symbol.rs  label_element.rs  label_info.rs  label_position.rs  line_color.rs  maxicode.rs  mod.rs  reverse_print.rs  stored_format.rs  stored_graphics.rs  text_alignment.rs  text_field.rs
src/encodings/: mod.rs
src/hex/: mod.rs
src/images/: mod.rs  monochrome.rs  pdf.rs  reverse_print.rs  scaled.rs
src/parsers/: command_utils.rs  epl_parser.rs  fs.rs  mod.rs  virtual_printer.rs  zpl_parser.rs
testdata/: gd_default_params.zpl  gd_thick.zpl  gd_thin_l.zpl  gd_thin_r.zpl
tests/: e2e_golden.rs  unit_pdf_encoder.rs  unit_public_api.rs
tests/e2e/: golden.rs  (+1 more)
(+6 files in other folders)
