[package]
name = "labelize"
version = "0.1.0"
edition = "2021"
description = "Turn ZPL/EPL into pixels — label rendering, simplified."

[dependencies]
image = "0.25"
imageproc = "0.25"
ab_glyph = "0.2"
clap = { version = "4", features = ["derive"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
lopdf = "0.34"
flate2 = "1"
base64 = "0.22"
regex = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
proptest = "1"
